@@ -1,4 +1,8 @@
-﻿drkns 29.09.2014 21:27:31 +0200 - build 4124
+﻿drkns 30.09.2014 21:08:57 +0200 - build 4125
+
+1. 0002811: Сломали Message с флагом FMSG_ALLINONE
+
+drkns 29.09.2014 21:27:31 +0200 - build 4124
 
 1. Уточнение 4122.1
 
